<resources>
    <string name="app_name">Plants</string>
    <string name="login">LOGIN</string>
    <string name="login_continue">Sign in your account to continue</string>
    <string name="title_plant_list">Flowers School</string>


    <string name="email_id">EMAIL ID</string>
    <string name="password">PASSWORD</string>
    <string name="forgot_pwd">Forgot Password?</string>
    <string name="title_activity_plant_list">PlantListActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>


</resources>
