<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rootView"
    android:backgroundTint="@color/primaryLight"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="10dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivLogin"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        android:src="@drawable/login_img"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerVertical="true">
            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_marginLeft="15dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/colorPrimaryDark" />
            <TextView
                android:id="@+id/tvLoginContinue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_continue"
                android:layout_marginLeft="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/secondaryText"
               />
        </LinearLayout>

    </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <LinearLayout
                android:id="@+id/userInfoLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentRight="true">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_id"
                    android:layout_marginLeft="5dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/primaryText"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="300dp"
                    android:backgroundTint="@color/iconColor"
                    android:layout_height="wrap_content"
                    app:boxCornerRadiusTopStart="25dp"
                    app:boxCornerRadiusBottomStart="25dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtEmailId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"/>
                </com.google.android.material.textfield.TextInputLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/primaryText"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="5dp"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="300dp"
                    app:boxStrokeColor="@color/secondaryText"
                    android:layout_height="wrap_content"
                    app:boxCornerRadiusTopStart="25dp"
                    app:boxCornerRadiusBottomStart="25dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:passwordToggleEnabled="true"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtPassword"
                        android:backgroundTint="@color/iconColor"
                        android:layout_width="match_parent"
                        android:inputType="numberPassword"
                        android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_pwd"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="right"
                    android:layout_marginRight="5dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"/>


            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnLogin"
                    android:text="@string/login"
                    android:background="@drawable/right_rounded_corner"
                    android:layout_width="300dp"
                    android:textColor="@color/iconColor"
                    android:gravity="center"
                    android:layout_alignParentTop="true"
                    android:layout_height="60dp"
                    android:shadowRadius="@android:integer/config_mediumAnimTime"/>

        </RelativeLayout>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>